--- a/1-tags.html
+++ b/1-tags.html
@@ -2,7 +2,7 @@
 title: Blog
 layout: default
 description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+header-img: "img-post/微信图片_20241231170717.jpg"
 ---
 
 <!-- Page Header -->
